namespaces/live.cloud-platform.service.justice.gov.uk/rajinder-sandbox/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "rajinder-sandbox"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-sre-engineers"
    cloud-platform.justice.gov.uk/application: "Proff Of Concepts"
    cloud-platform.justice.gov.uk/owner: "APP OPS: appops@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/rajinder-pocs"
    cloud-platform.justice.gov.uk/team-name: "laa-sre-admins"
    cloud-platform.justice.gov.uk/review-after: "2025-10-21"
